@@ -77,7 +77,7 @@ INDEX: {
             [ body        => $ftih    ],
             [ dist        => $fti     ],
             [ version     => $stored  ],
-            [ path        => $stored  ],
+            [ doc         => $stored  ],
             [ date        => $stored  ],
             [ user        => $stored  ],
             [ user_name   => $stored  ],
@@ -98,6 +98,7 @@ INDEX: {
             [ key         => $indexed ],
             [ extension   => $fti     ],
             [ abstract    => $ftih    ],
+            [ doc         => $stored  ],
             [ dist        => $stored  ],
             [ version     => $stored  ],
             [ date        => $stored  ],
@@ -151,6 +152,7 @@ for my $doc (
         abstract  => 'A key/value pair data type',
         date      => '2010-10-18T15:24:21Z',
         dist      => 'pair',
+        doc       => 'doc/pair',
         extension => 'pair',
         key       => 'pair',
         user      => 'theory',
@@ -183,7 +185,7 @@ for my $doc (
         date      => '2010-10-18T15:24:21Z',
         dist      => 'pair',
         key       => 'pair/doc/pair',
-        path      => 'doc/pair',
+        doc       => 'doc/pair',
         title     => 'pair 0.1.0',
         user      => 'theory',
         user_name => 'David E. Wheeler',
@@ -209,6 +211,7 @@ for my $doc (
         abstract  => 'A semantic version data type',
         date      => '2011-03-21T23:49:28Z',
         dist      => 'semver',
+        doc       => 'docs/semver',
         extension => 'semver',
         key       => 'semver',
         user      => 'roger',
@@ -220,6 +223,7 @@ for my $doc (
         abstract  => 'A less than semantic version data type (scary)',
         date      => '2011-03-21T23:49:28Z',
         dist      => 'semver',
+        doc       => 'docs/perver',
         extension => 'perver',
         key       => 'perver',
         user      => 'roger',
@@ -334,7 +338,7 @@ is_deeply $res, {
             date      => "2010-10-18T15:24:21Z",
             dist      => "pair",
             excerpt   => "The ordered pair data type is <strong>nifty</strong>, I tell ya!",
-            path      => "doc/pair",
+            doc       => "doc/pair",
             score     => "0.015",
             title     => "pair 0.1.0",
             user      => "theory",
@@ -358,7 +362,7 @@ is_deeply $res, {
             date      => "2010-10-18T15:24:21Z",
             dist      => "pair",
             excerpt   => "The ordered pair data type is <strong>nifty</strong>, I tell ya!",
-            path      => "doc/pair",
+            doc       => "doc/pair",
             score     => "0.015",
             title     => "pair 0.1.0",
             user      => "theory",
@@ -381,6 +385,7 @@ is_deeply $res, {
             abstract  => "A semantic version data type",
             date      => "2011-03-21T23:49:28Z",
             dist      => "semver",
+            doc       => 'docs/semver',
             excerpt   => "A <strong>semantic</strong> version data type",
             extension => "semver",
             score     => "0.140",
@@ -392,6 +397,7 @@ is_deeply $res, {
             abstract  => "A less than semantic version data type (scary)",
             date      => "2011-03-21T23:49:28Z",
             dist      => "semver",
+            doc       => 'docs/perver',
             excerpt   => "A less than <strong>semantic</strong> version data type (scary)",
             extension => "perver",
             score     => "0.100",
