@@ -1,6 +1,9 @@
 Revision history for Perl extension PGXN-API-Searcher.
 
 0.6.2
+      - Updated for "doc" changes in PGXN::API v0.6.6:
+        + The "path" key in doc results has been renamed "doc".
+        + The "doc" key has been added to extension results.
 
 0.6.1   2011-03-28T03:07:13
       - The index to query is no longer specified as the first argument to
